Add security definition to the right endpoints.
